maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:29: error: not enough arguments for method keepHandOnSideWall: (som: Int)Int.
Unspecified value parameter som.
    keepHandOnSideWall()
                      ^